Refactor CookiesUtill class.